# labs-se

./: .gitignore  LICENSE  README.md  default.workspace  default.workspace.layout
1 course/coursework_shell/: coursework_shell.cbp  demo.cpp  demo.h  main.cpp  teo.cpp  teo.h  test.cpp  test.h
1 course/lab_1/: first.cpp  lab_1_second.cbp  lab_1_third.cbp  second.cpp  test3.txt  third.cpp
3 course/compiler_labs/ruby-compiler/: .gitignore  CMakeLists.txt  README.md  TLexer.g4  TParser.g4  generate.cmd  generate.sh  test.txt  testArray.txt  testErrors.txt  testIf.txt  testPuts.txt  testWhile.txt
3 course/compiler_labs/ruby-compiler/src/: CodeGenerator.cpp  CodeGenerator.h  CompilerException.h  main.cpp
3 course/postgres_coursework/: AuthForm.cpp  AuthForm.h  BuyerForm.cpp  BuyerForm.h  BuyerForm.ui  CMakeLists.txt  Database.cpp  Database.h  MainWindow.cpp  MainWindow.h  NagruzkaRepository.cpp  NagruzkaRepository.h  OperatorForm.cpp  OperatorForm.ui  StringTools.h  db.sql  main.cpp
3 course/postgres_coursework/Controllers/: AuthForm.cpp  AuthForm.h  BuyerForm.cpp  BuyerForm.h  CartForm.cpp  CartForm.h  CreateOrderForm.cpp  CreateOrderForm.h  MainWindow.cpp  MainWindow.h  ManagerForm.cpp  ManagerForm.h  OperatorForm.cpp  OperatorForm.h  OrderDetailsForm.cpp  OrderDetailsForm.h  SmsConfirmDialog.cpp  SmsConfirmDialog.h
3 course/postgres_coursework/Models/: CategoryRepository.cpp  CategoryRepository.h  ClientRepository.cpp  ClientRepository.h  CustomProxyModel.h  Database.cpp  Database.h  DeliveryPointRepository.cpp  DeliveryPointRepository.h  Errors.h  IRepository.h  ManagerRepository.cpp  ManagerRepository.h  ManufacturerRepository.cpp  ManufacturerRepository.h  OrderRepository.cpp  OrderRepository.h  ProductInWarehouseRepository.cpp  ProductInWarehouseRepository.h  ProductRepository.cpp  ProductRepository.h
3 course/postgres_coursework/Views/: AuthForm.ui  BuyerForm.ui  CartForm.ui  CreateOrderForm.ui  MainWindow.ui  ManagerForm.ui  OperatorForm.ui  OrderDetailsForm.ui  SmsConfirmDialog.ui
3 course/spo_lab/lab01/: CMakeLists.txt  command.cpp  command.h  cpu.cpp  cpu.h  main.cpp  memory.h  types.h
3 course/spo_lab/lab01/tests/: test_call_ret.txt  test_conditional_goto_sf.txt  test_conditional_goto_zf.txt  test_float_arif.txt  test_goto.txt  test_int_arif.txt  test_io.txt  test_perecilki.txt
3 course/spo_lab/lab02/: CMakeLists.txt  main.cpp  mathexpression.h  mathparser.cpp  mathparser.h  operatorparser.cpp  operatorparser.h  translator.cpp  translator.h  types.h
3 course/spo_lab/lab02/tests/: test_call_ret_asm.txt  test_conditional_goto_sf_asm.txt  test_conditional_goto_zf_asm.txt  test_float_arif_asm.txt  test_goto_asm.txt  test_int_arif_asm.txt  test_io_asm.txt  test_perecilki_asm.txt
3 course/spo_lab/lab03/: CMakeLists.txt  command.cpp  command.h  cpu.cpp  cpu.h  debugger.cpp  debugger.h  main.cpp  memory.h  types.h
4 course/info_protection/lab02/: CMakeLists.txt  Widget.cpp  Widget.h  Widget.ui
4 course/network_programming/lab02_client/: CMakeLists.txt  Widget.cpp  Widget.h  Widget.ui
4 course/network_programming/lab02_server/: CMakeLists.txt  TcpServer.cpp  TcpServer.h  main.cpp
4 course/network_programming/lab05/: CMakeLists.txt  LinuxSniffer.cpp  LinuxSniffer.h  PacketParser.hpp  Sniffer.h  WinSniffer.cpp  WinSniffer.h  main.cpp
4 course/parallel_coursework/benchmark/: CMakeLists.txt  main.cpp
4 course/parallel_programming/lab10/lab10_1b/: CMakeLists.txt  main.cpp
4 course/parallel_programming/lab4/: CMakeLists.txt  Doxyfile  main.cpp
cmake_default_project_settings/: CMakeLists.txt
lab_1/: .project  lab_1_first.cbp  lab_1_first.depend  lab_1_first.layout  lab_1_second.depend  lab_1_second.layout  lab_1_third.depend  lab_1_third.layout  test.txt
lab_10/: lab_10.cbp  lab_10.depend  main.cpp
lab_11/: functions.cpp  lab_11.cbp  lab_11.depend  struct.h
lab_12_cstring/: lab_12_cstring.depend
lab_12_string/: lab_12_string.cbp  lab_12_string.depend
lab_12_wstring/: lab_12_wstring.depend  main.cpp
lab_13/: lab_13.cbp  lab_13.depend  main.cpp
lab_14/: lab_14.cbp  lab_14.depend  main.cpp
lab_15/: lab_15.cbp  lab_15.depend
lab_16/: lab_16.cbp  lab_16.depend  main.cpp
lab_17_dyn_arr/: main.cpp
lab_17_list/: lab_17_list.cbp
lab_17_vector/: main.cpp
lab_2/: lab_2.cbp  lab_2.depend  lab_2.layout  main.cpp
lab_3/: lab_3.depend  lab_3.layout  main.cpp
lab_4/: Out.txt  lab_4.depend  lab_4.layout  main.cpp.save-failed
lab_4_struct/: Out.txt  lab_4_struct.cbp  lab_4_struct.depend  lab_4_struct.layout
lab_5/: lab_5.cbp  lab_5.depend  main.cpp
lab_5_ex4/: lab_5_ex4.cbp  lab_5_ex4.depend  lab_5_ex4.layout  main.cpp
lab_6_duo_list/: lab_6_duo_list.cbp  lab_6_duo_list.depend  lab_6_duo_list.layout  main.cpp
lab_6_dyn_array/: lab_6_dyn_array.cbp  lab_6_dyn_array.depend  lab_6_dyn_array.layout  main.cpp
lab_6_list/: lab_6_list.cbp  lab_6_list.depend  lab_6_list.layout  main.cpp
lab_6_static_array/: lab_6_static_array.cbp  lab_6_static_array.depend  lab_6_static_array.layout  main.cpp
lab_6_vector/: lab_6_vector.cbp  lab_6_vector.depend  lab_6_vector.layout  main.cpp
lab_7/: input — копия.txt  lab_7.depend  main.cpp
lab_8/: lab_8.cbp  main.cpp
lab_8_cstring/: lab_8_cstring.cbp  lab_8_cstring.depend  main.cpp
lab_8_string/: lab_8_string.cbp
lab_8_wstring/: lab_8_wstring.cbp  lab_8_wstring.depend  main.cpp
lab_9/: lab_9.cbp  lab_9.depend  main.cpp
mat_analiz/: main.cpp  mat_analiz.cbp  mat_analiz.depend  mat_analiz.layout
math_lab_1/: main.cpp  math_lab_1.cbp  math_lab_1.depend  math_lab_1.layout
math_lab_2/: main.cpp  math_lab_2.cbp  math_lab_2.depend  math_lab_2.layout
math_lab_3/: dots.txt  main.cpp  math_lab_3.cbp  math_lab_3.depend  math_lab_3.layout
math_lab_4/: main.cpp  math_lab_4.cbp  math_lab_4.depend  Новый текстовый документ.txt
math_lab_5/: main.cpp  math_lab_5.depend
math_lab_6/: main.cpp  math_lab_6.depend
test/: main.cpp  main_shell.cpp  test.depend  test.layout
tests/test_gcc_warnings/: CMakeLists.txt  main.cpp
testtts/: NewFrame.h  testtts.cbp  testtts.depend  testtts.layout
(+929 files in other folders)
